# flux.2-klein-pipeline

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  streamlit_app.py
docs/superpowers/plans/: 2026-03-12-image-editing-and-base-model.md  2026-03-12-prompt-upsampling.md  2026-03-15-examples-and-vision-upsampling.md
docs/superpowers/specs/: 2026-03-12-image-editing-and-base-model-design.md  2026-03-12-prompt-upsampling-design.md  2026-03-15-examples-and-vision-upsampling-design.md
tests/: test_streamlit_app.py
